# TCO-TripSafetyFactors

./: .gitignore  CMakeLists.txt
src/: TripSafetyFactors.hpp  array2d.hpp  fmincg.hpp  logreg.hpp  main.cpp  make_submission.sh  num.hpp  sigmoid.hpp
